Apache SIS Change Log
======================
Release 0.4 - Current Development

* SIS-132 Better support for eclipse IDE (mattmann)

Release 0.3 - 06/29/2013

* SIS-105: Renamed "sis-app" module as "sis-console".

* SIS-103: Fix Eclipse errors in SIS (Travis Pinney via mattmann)

* SIS-101 Moved QuadTree, GeoRSSData and related classes to their own package,
  namely "org.apache.sis.index.tree".

* SIS-31 Website needs a facelift (aestrada, Ross Laidlaw,
  Suresh Marru, mattmann)

* SIS-95: Explicitly specify Typed extends Object parameters
  in FallbackConverterTest (mattmann, desruisseaux)

* SIS-77: Provide an IDE build for Eclipse (mattmann)

* SIS-70: Make QuadTreeNode and associated classes package private
  (Martin Desruisseaux, mattmann)

* SIS-56: Merged the sis-parent/pom.xml with the root pom.xml.
  (Martin Desruisseaux)

* SIS-58: Fix SIS Jetty Webapp definition to pick random port
  (mattmann)

* SIS-54: Remove the definition of the sis.version property
  (Martin Desruisseaux via mattmann)

* SIS-53: "svn:ignore" property missing on the "sis-app" directory
  (Martin Desruisseaux via mattmann)

* SIS-52: Create a sis-metadata module (Martin Desruisseaux via mattmann)

* SIS-50: added simple junit tests for the GeoHashUtils class in sis-core
  (rlaidlaw)

* SIS-49: updated for loop in getCircularRegionApproximation of LatLonPointRadius
  to prevent ArrayIndexOutOfBoundsException, ArithmeticException (rlaidlaw)

* SIS-48: added simple junit tests for the core geometry classes in sis-core
  (LatLon, LatLonRect and LatLonPointRadius) (rlaidlaw)

* SIS-46 Add sis-app module to current SIS project (Charithcc)

* SIS-44 Update the 'demo.jsp' file in the SIS webapp to use an
  open source maps API (Ross Laidlaw via mattmann)

* SIS-41 Improve the demo.jsp CSS (Charitha Madusanka via mattmann)

* SIS-40 Add the missing documentation comments for SIS
  WS layer (Charitha Madusanka via mattmann)

* SIS-38 Add the missing documentation comments for SIS-core